--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,9 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "api/run.py",
-      "use": "@vercel/python"
-    },
-    {
-      "src": "templates/index.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "templates/welcome.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "static/**/*",
-      "use": "@vercel/static"
-    }
+    { "src": "api/run.py", "use": "@vercel/python" },
+    { "src": "templates/*.html", "use": "@vercel/static" },
+    { "src": "static/**/*", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/api/run", "dest": "api/run.py" },
