--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,19 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/run.py", "use": "@vercel/python" },
-    { "src": "templates/*.html", "use": "@vercel/static" },
-    { "src": "static/**/*", "use": "@vercel/static" }
+    {
+      "src": "api/run.py",
+      "use": "@vercel/python"
+    },
+    {
+      "src": "templates/*.html",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
-    { "src": "/static/(.*)", "dest": "static/$1" },
-    { "src": "/api/(.*)", "dest": "api/run.py" },
-    { "src": "/api/run", "dest": "api/run.py" },
-    { "src": "/", "dest": "templates/welcome.html" },
-    { "src": "/index", "dest": "templates/index.html" }
+    {
+      "src": "/(.*)",
+      "dest": "api/run.py"
+    }
   ]
 }
